# hi

./: CHANGELOG.md  CLA.md  Cargo.toml  LICENSE  README.md  install.sh
.github/homebrew/: hi.rb
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  PRODUCT.md  SPEC.md  render-test.md
docs/plans/: 2026-05-13-i18n-locale-system.md
docs/回忆录/: 2026-05-09-产品设计.md  2026-05-09-功能开发.md  2026-05-09-技术思考.md  2026-05-13-语法高亮主题调试.md
examples/: test_shell_scopes.rs  test_syntect.rs
locales/: CONTRIBUTING.md  en-US.toml  zh-CN.toml
src/: app.rs  ime.rs  lib.rs  main.rs  tests.rs
src/ai/: client.rs  context.rs  edit_session.rs  hint.rs  log.rs  mod.rs  parser.rs  prompt.rs  tools.rs
src/buffer/: history.rs  mod.rs  rope.rs
src/config/: loader.rs  mod.rs
src/editor/: mod.rs  motion.rs
src/leetcode/: api.rs  auth.rs  cache.rs  mod.rs  models.rs  panel.rs
src/locale/: loader.rs  mod.rs
src/mode/: ai.rs  cmd_completion.rs  command.rs  insert.rs  mod.rs  normal.rs  visual.rs
src/syntax/: highlight.rs  mod.rs  tree_sitter.rs
src/ui/: chatpanel.rs  diff_panel.rs  filetree.rs  ghost.rs  grep_panel.rs  mdrender.rs  mod.rs  perf_log.rs  picker.rs  preview.rs  renderer.rs  statusbar.rs  tutorial.rs
tests/: ai_parser_tests.rs  buffer_tests.rs  dump_json_scopes.rs  editor_tests.rs  mode_tests.rs  new_features_tests.rs  render_escape_test.rs  syntax_tests.rs  syntect_highlighter_test.rs  syntect_md_debug.rs  syntect_newline_test.rs  syntect_toml_debug.rs  tui_harness.rs  tui_smoke.rs  visual_frame_gen.rs
tests/fixtures/: md_frame.ans  rs_frame.ans  terminal_viewer.html
tui-test/: Cargo.toml
tui-test/src/: main.rs
