[package]
name = "hi"
version = "0.1.6"
edition = "2021"
description = "A modal text editor with native AI assistance"
license = "Apache-2.0"
repository = "https://github.com/LiPingjiang/hi"
homepage = "https://github.com/LiPingjiang/hi"
documentation = "https://github.com/LiPingjiang/hi#readme"
keywords = ["editor", "terminal", "vim", "tui", "ai"]
categories = ["command-line-utilities", "text-editors"]
readme = "README.md"
exclude = [
    ".github/",
    "docs/",
    "install.sh",
    "CLA.md",
]

[lib]
name = "hi"
path = "src/lib.rs"

[[bin]]
name = "hi"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ropey = "1.6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
regex = "1"
unicode-width = "0.2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dirs = "5"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }

# Tree-sitter incremental parsing engine
tree-sitter = "0.26"

# Language grammars
tree-sitter-rust        = "0.24"
tree-sitter-python      = "0.25"
tree-sitter-javascript  = "0.25"
tree-sitter-typescript  = "0.23"
tree-sitter-java        = "0.23"
tree-sitter-go          = "0.25"
tree-sitter-json        = "0.24"
tree-sitter-toml-ng     = "0.7"
tree-sitter-yaml        = "0.7"
tree-sitter-bash        = "0.25"
tree-sitter-html        = "0.23"
tree-sitter-xml         = "0.7"
tree-sitter-md          = "0.5"

[dev-dependencies]
tempfile = "3"
portable-pty = "0.8"
vt100 = "0.15"
nix = { version = "0.29", features = ["signal"] }
ropey = "1.6"
crossterm = "0.28"

[features]
default = ["leetcode"]
leetcode = []
pty_tests = []

[profile.release]
opt-level = 3
lto = true
strip = true
